newsApp/static/custom.css
body {
  padding-top: 1em;
}

.logo-img {
	padding-left: 4px;
}

.logo-text {
    font-family: 'Comic Sans MS', cursive, sans-serif;
    font-size: 32px;
    font-style: italic;
}

.body-content {
  padding: 40px 0 0 0;
}

#section-dropdown-button {
  margin-bottom: 0.5em;
}

.section-dropdown-icon {
    height: 1.5em;
    width: 2em;
    margin-right: 2px;
}

.publisher-link {
  color: #666666;
}

.storyCarouselPic {
  max-height: 14em;
  width: 100%
}

.storyMedia {
  height: 14em;
}

/* used in old site */
.storyDiv {
  padding: 0;
  margin-bottom: 0;
  border: 0;
}

